# city2ba

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Readme.md  codemeta.json  paper.bib  paper.md
.github/workflows/: rust.yml
src/: baproblem.rs  camera.rs  generate.rs  lib.rs  noise.rs  synthetic.rs
tests/: main.rs
