[package]
name = "city2bal"
version = "0.1.0"
authors = ["Tristan Konolige <tristan.konolige@gmail.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
tobj = {git = "https://github.com/tkonolige/tobj.git"}
cgmath = "0.17"
structopt = "*"
rand = "0.6"
ply-rs = "*"
poisson = "0.10"
nalgebra = "0.17"
itertools = "*"
embree-rs = "*"
rayon = "1"
nom = "5"
indicatif = {git = "https://github.com/mitsuhiko/indicatif.git", features=["with_rayon"]}
disjoint-sets = "*"
byteorder = "1"
rstar = "*"
