[package]
name = "city2ba"
version = "1.1.0"
authors = ["Tristan Konolige <tristan.konolige@gmail.com>"]
license = "BSD-2-Clause"
homepage = "https://github.com/tkonolige/city2ba"
repository = "https://github.com/tkonolige/city2ba"
readme = "Readme.md"
description = "A tool for generating synthetic bundle adjustment problems"
build = "build.rs"
edition = "2018"
exclude = ["paper.md", ".github"]

[dependencies]
tobj = "0.1.12"
cgmath = "0.17"
structopt = "0.3"
rand = "0.6"
ply-rs = "0.1"
poisson = "0.10"
nalgebra = "0.17"
itertools = "0.8"
embree-rs = "0.3"
rayon = "1"
nom = "5"
indicatif = {version = "0.14", features=["with_rayon"]}
disjoint-sets = "0.4"
byteorder = "1"
rstar = "0.7"
line_intersection = "0.4"
geo = "0.4"

[dev-dependencies]
assert_cmd = "0.12"
predicates = "1"
tempfile = "3"
